version/0.38/_sources/api/solver/_autosummary/settings/symmetry.rst.txt
:orphan:

.. _symmetry:

symmetry
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.symmetry
    :show-inheritance:

.. rubric:: Methods

============================================   =========================================

Method                                                                           Summary

============================================   =========================================
:ref:`create <create_6>`                                             Crate new boundary.

:ref:`delete <delete>`                                          Delete selected objects.

:ref:`rename <rename>`                                                Rename the object.

:ref:`list_1 <list_1>`                                    List the names of the objects.

:ref:`list_properties_1 <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                            Create a copy of the object.

============================================   =========================================

.. rubric:: Named object type

:ref:`symmetry_child <symmetry_child>`


.. rubric:: Included in:

==============================   ===================================================

Parent                                                                       Summary

==============================   ===================================================
:ref:`boundaries <boundaries>`       Defines physics boundaries for a volume region.

==============================   ===================================================

